# mathvision-tutor

./: .gitignore  README.md  pyproject.toml
src/: .gitignore  firebase.json  pubspec.yaml
src/backend/agents/: gemini_solve_agent.py  image_quality_agent.py  ocr_agent.py  persist_agent.py  validation_agent.py
src/backend/api/: app.py
src/backend/graph/: __init__.py  graph_factory.py  solver_graph.py
src/backend/models/: solve_record.py  user_credits.py
src/backend/prompts/: gemini_followup_prompt.jinja  gemini_solver_prompt.jinja
src/backend/services/: gemini_service.py  ocr_service.py  quality_service.py  validation_service.py
src/cloud_functions/: package-lock.json  package.json  top_up_credits.ts  update_streaks.ts
src/infra/: latency_alert.tf  logs_bigquery.tf
src/lib/: firebase_options.dart  main.dart
src/lib/bloc/auth/: auth_cubit.dart  auth_state.dart  auth_state.freezed.dart
src/lib/bloc/capture/: capture_cubit.dart  capture_state.dart  capture_state.freezed.dart
src/lib/bloc/result/: result_bloc.dart  result_event.dart  result_event.freezed.dart  result_state.dart  result_state.freezed.dart  result_state.g.dart
src/lib/screens/auth/: login_screen.dart
src/lib/screens/capture/: capture_screen.dart
src/lib/screens/result/: result_screen.dart
src/lib/services/: solve_api.dart
src/lib/widgets/: bounding_box.dart  credits_badge.dart
src/test/: capture_screen_test.dart
src/tests/backend/: conftest.py  test_solver_graph.py  test_solver_pipeline.py
src/tests/flutter/: result_screen_test.dart
