[project]
name = "mathvision-tutor"
version = "0.1.0"
description = "A Python-based project for mathematics and computer vision tutoring"
authors = [
    {name = "Benedict Chan", email = "benedictchan247@gmail.com"},
]
dependencies = [
    "numpy>=1.24.0",
    "opencv-python>=4.8.0",
    "matplotlib>=3.7.0",
    "flask>=2.3.3",
    "firebase-admin>=6.1.1",
    "flask-limiter>=3.4.1",
    "google-cloud-vision>=3.4.0",
    "google-generativeai>=0.3.2",

]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
]